add following logic
