# backend/docs/swagger.json
@@ -33,6 +33,24 @@
                 "responses": {}
             }
         },
+        "/streamer/:username": {
+            "get": {
+                "description": "Get the streamer's information",
+                "tags": [
+                    "Streamer"
+                ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Username of the user",
+                        "name": "username",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {}
+            }
+        },
         "/streams/:username": {
             "get": {
                 "description": "Get the live stream for the user",
@@ -112,7 +130,7 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "Username of the user",
+                        "description": "Username of the user to follow",
                         "name": "username",
                         "in": "path",
                         "required": true
@@ -130,7 +148,7 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "Username of the user",
+                        "description": "Username of the user to unfollow",
                         "name": "username",
                         "in": "path",
                         "required": true
