# backend/router/router.go
@@ -5,6 +5,7 @@ import (
 	"github.com/gofiber/fiber/v2/middleware/logger"
 	"github.com/gofiber/swagger"
 	"github.com/waxer59/watchMe/internal/auth/auth_controller"
+	"github.com/waxer59/watchMe/internal/streamer/streamer_controller"
 	"github.com/waxer59/watchMe/internal/streams/streams_controller"
 	"github.com/waxer59/watchMe/internal/users/users_controller"
 	"github.com/waxer59/watchMe/internal/webhooks/webhooks_controller"
@@ -15,6 +16,7 @@ func New(app *fiber.App) {
 	api := app.Group("api", logger.New())
 
 	webhooks_controller.New(api)
+	streamer_controller.New(api)
 	users_controller.New(api)
 	auth_controller.New(api)
 	streams_controller.New(api)
